# gmock-gyp

./: BUILD.gn  Makefile  gmock.gyp  wscript
googletest-1.10.0/googlemock/include/gmock/: gmock-actions.h
