config("gmock_public") {
  include_dirs = [ "googletest-d225acc/googlemock/include" ]
}

config("gmock_private") {
  include_dirs = [
    "googletest-d225acc/googlemock/include",
    "googletest-d225acc/googlemock",
  ]
}

config("gtest_public") {
  defines = [ "GTEST_USE_OWN_TR1_TUPLE=1" ]
  include_dirs = [ "googletest-d225acc/googletest/include" ]
}

config("gtest_private") {
  defines = [ "GTEST_USE_OWN_TR1_TUPLE=1" ]
  include_dirs = [
    "googletest-d225acc/googletest/include",
    "googletest-d225acc/googletest",
  ]
}

static_library("gmock_main") {
  sources = [
    "googletest-d225acc/googlemock/src/gmock_main.cc",
  ]
  public_deps = [
    ":gmock",
  ]
}

static_library("gmock") {
  sources = [
    "googletest-d225acc/googlemock/src/gmock-all.cc",
    "googletest-d225acc/googlemock/src/gmock-cardinalities.cc",
    "googletest-d225acc/googlemock/src/gmock-internal-utils.cc",
    "googletest-d225acc/googlemock/src/gmock-matchers.cc",
    "googletest-d225acc/googlemock/src/gmock-spec-builders.cc",
    "googletest-d225acc/googlemock/src/gmock.cc",
  ]
  public_deps = [
    ":gtest",
  ]
  configs += [ ":gmock_private" ]
  public_configs = [ ":gmock_public" ]
}

static_library("gtest") {
  sources = [
    "googletest-d225acc/googletest/src/gtest-all.cc",
    "googletest-d225acc/googletest/src/gtest-death-test.cc",
    "googletest-d225acc/googletest/src/gtest-filepath.cc",
    "googletest-d225acc/googletest/src/gtest-port.cc",
    "googletest-d225acc/googletest/src/gtest-printers.cc",
    "googletest-d225acc/googletest/src/gtest-test-part.cc",
    "googletest-d225acc/googletest/src/gtest-typed-test.cc",
    "googletest-d225acc/googletest/src/gtest.cc",
  ]
  configs += [ ":gtest_private" ]
  public_configs = [ ":gtest_public" ]
}
